# OpenCL

./: CMakeLists.txt  README.md  example.txt  main.cpp
config/: config.hpp
include/: README.md  bitonic_cpu.hpp  bitonic_sort.h  ocl.h  ocl.hpp  opencl.hpp  parallel_sort.hpp  types_mapping.hpp
kernels/: bitonic_localmem.cl  bitonic_sort.cl
tests/generator/: a.out  test_gen.cpp
unit_tests/: CMakeLists.txt  funcs.h  funcs.hpp  tests.cpp
utils/: utils.h  utils.hpp
